--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
+    "@material-ui/core": "^1.4.3",
+    "d3-ease": "^1.0.3",
+    "firebase": "^5.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-firebase-file-uploader": "^2.4.1",
+    "react-move": "^2.7.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
